--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -26,7 +26,7 @@
 				<div class="form sign-up">
 					<div class="input-group">
 						<i class='bx bxs-user'></i>
-						<input type="text" placeholder="Username">
+						<input type="user" placeholder="user">
 					</div>
 					<div class="input-group">
 						<i class='bx bx-mail-send'></i>
@@ -39,8 +39,8 @@
 					<div class="input-group">
 						<i class='bx bxs-lock-alt'></i>
 						<select name="role" id="role">
-							<option value="user">Admin</option>
-							<option value="employeer">Guest</option>
+							<option value="user">User</option>
+							<option value="employeer">Employer</option>
 						</select>
 					</div>
 					
@@ -55,6 +55,7 @@
 							Sign in here
 						</b>
 					</p>
+					<div id="error" style="color: red"></div>
 				</div>
 			</div>
 		
